# fin_datalake

./: .dockerignore  .env.example  .env.user.example  .gitignore  Dockerfile  README.md  cleanup.sh  demo_start.ps1  deploy-all.sh  pytest.ini  quick-deploy.sh  setup-config.sh
app-code/: README.md  etl.py  pyproject.toml  requirements-client.txt  requirements-worker.txt  setup.sh  summarize.py
app-code/agents/: __init__.py  dummy_agents.py
app-code/benchmark-results/market-pulse/20260407-233742/: market_pulse_summary.csv  market_pulse_summary.json  market_pulse_trials.csv
app-code/benchmark-results/mttr/20260406-235031/: mttr_summary.json  mttr_trials.csv
app-code/benchmark-results/mttr/20260407-003142/: mttr_summary.json  mttr_trials.csv
app-code/benchmark-results/mttr/20260407-024901/: mttr_summary.json  mttr_trials.csv
app-code/benchmark-results/mttr/20260407-031336/: mttr_summary.json  mttr_trials.csv
app-code/benchmark-results/mttr/20260407-033217/: mttr_summary.json  mttr_trials.csv
app-code/benchmark-results/mttr/20260407-034337/: mttr_summary.json  mttr_trials.csv
app-code/benchmark-results/mttr/20260407-034737/: mttr_summary.json  mttr_trials.csv
app-code/benchmark-results/zero-copy/20260406-222901/: zero_copy_summary.json  zero_copy_trials.csv
app-code/benchmark-results/zero-copy/20260406-223020/: zero_copy_summary.json  zero_copy_trials.csv
app-code/etl/: README.md  config.py  pyproject.toml  requirements.txt  runtime.py
app-code/etl/agents/: __init__.py  base.py  bus.py  catalog.py  cli.py  context.py  gemini_agent.py  hub.py  langchain_adapter.py  manager.py  mixins.py  registry.py  sentiment_agent.py  tools.py
app-code/etl/core/: __init__.py  base_service.py  base_storage_connector.py  base_task.py
app-code/etl/core/utils/: dependency_aware_mixin.py
app-code/etl/docs/: FUTURE_ENHANCEMENTS.md  RUNTIME_CONFLICTS.md
app-code/etl/ingestion/: rest_api_ingestion.py
app-code/etl/io/: __init__.py  base.py
app-code/etl/io/sinks/: __init__.py  delta_lake.py  dlq.py  http.py  milvus.py  risingwave.py  timescaledb.py
app-code/etl/io/sources/: __init__.py  delta_lake.py  file.py  kafka.py  rest_api.py  risingwave.py  websocket.py
app-code/etl/io/tasks/: __init__.py  delta_lake_write_task.py  risingwave_write_task.py
app-code/etl/services/: hive.py  minio.py
app-code/etl/services/ingestion/: websocket_ingestor.py
app-code/etl/services/processing/: stateful_processor.py
app-code/etl/utils/: log_sink.py  logging.py  status.py
app-code/frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
app-code/frontend/src/: App.css  App.tsx  index.css
app-code/frontend/src/api/: client.ts
app-code/frontend/src/components/: Dashboard.tsx  Login.tsx
app-code/frontend/src/components/shared/: AsyncState.tsx
app-code/frontend/src/components/views/: AgentHub.tsx  ComputePipelines.tsx  DataCatalog.tsx  InfraIframes.tsx  SystemOverseer.tsx
app-code/frontend/src/hooks/: usePollingResource.ts  useRoutePath.ts
app-code/frontend/src/lib/: time.ts
app-code/frontend/src/store/: useAuthStore.ts
app-code/gateway/: __init__.py  check_db.py  seed_test_users.py
app-code/gateway/adapters/: __init__.py  agent.py  broker.py  compute.py  data.py  system.py
app-code/gateway/api/: __init__.py  deps.py  errors.py  main.py
app-code/gateway/api/routers/: agents.py  alerts.py  auth.py  intent.py  system.py
app-code/gateway/core/: __init__.py  adapters.py  config.py  dispatch.py  ray_client.py  rbac.py  redis.py  registry.py  security.py
app-code/gateway/db/: __init__.py  audit_log.py  crud.py  models.py  session.py
app-code/gateway/mcp/: __init__.py  server.py
app-code/gateway/mcp/tools/: agent.py  broker.py  compute.py  data.py  system.py
app-code/gateway/models/: __init__.py  intent.py  user.py
app-code/gateway/services/: system.py
app-code/ioutils/: __init__.py  deltalake.py  hive_metastore.py
app-code/ioutils/hms_client/hive_metastore/: ThriftHiveMetastore.py  ttypes.py
app-code/lakehouse_client/: __init__.py  agents.py  cli.py  etl.py
app-code/overseer/: OVERSEER_GUIDE.md  __init__.py  agent_registry.py  config.mttr.yaml  config.py  config.yaml  hot_reload.py  loop.py  main.py  models.py  redis_utils.py  s3_sync.py  store.py
app-code/overseer/actuators/: __init__.py  alerts.py  base.py  gateway.py  ray_ops.py  status_reporter.py  webhook.py
app-code/overseer/collectors/: __init__.py  base.py  delta_lake.py  health.py  kafka.py  prefect.py  ray.py
app-code/overseer/policies/: __init__.py  base.py  cooldown.py  healing.py  scaling.py  staleness.py
app-code/pipelines/: agent_coordination_demo.py  api_to_delta_pipeline.py  benchmark_market_pulse.py  demo_pipeline.py  gemini_demo.py  inspect_results.py  kafka_to_delta_pipeline.py  legacy_news.py  legacy_ohlc.py  legacy_sec.py  market_pulse_demo.py  market_pulse_ingest.py  mcp_demo.py  monitoring_demo.py  self_healing_demo.py  static_join_demo.py  zero_copy_benchmark.py
app-code/pipelines/baselines/: baseline_airflow_sim.py  baseline_plain.py
app-code/pipelines/benchmarks/: README.md  __init__.py  benchmark_market_pulse.py  benchmark_table_agent.py  contracts.py  mttr_recovery_benchmark.py  shared.py  zero_copy_benchmark.py
app-code/pipelines/benchmarks/baselines/: __init__.py  baseline_fragmented_serialized.py  baseline_plain.py  baseline_spark_glue.py
app-code/sample-agents/: __init__.py  market_analyst.py  strategy_agent.py
app-code/sample-etl-workflows/: api_to_delta_pipeline.py
app-code/sample_agents/: __init__.py  market_analyst.py  strategy_agent.py
app-code/scripts/: deploy_test_agents.py  provider_smoke_check.py  seed_targets.py  setup_storage.py  upload_default_policies.py
app-code/tests/: test_agent_control_live_detection.py  test_agent_hub_stale_cleanup.py  test_agent_manager_cli.py  test_gateway_demo_hardening.py
app-code/transformations/: __init__.py  news.py  ohlc.py
app-code/transformations/llm/: __init__.py  base.py  vllm_model_host.py
(+156 files in other folders)
