[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-framework"
version = "0.1.0"
description = "Distributed ETL framework using Prefect and Ray"
readme = "README.md"
requires-python = ">=3.11"

# Core dependencies - minimal for package structure
# Full deps are in requirements-client.txt and requirements-worker.txt
dependencies = []

[project.optional-dependencies]
client = [
    "prefect>=2.14",
    "prefect-ray>=0.3",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "loguru>=0.7",
    "requests>=2.28",
]
worker = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "deltalake>=0.14",
    "loguru>=0.7",
    "requests>=2.28",
    "websocket-client>=1.6",
    "confluent-kafka>=2.3",
    "psycopg2-binary>=2.9",
    "pymilvus>=2.3",
    "thrift>=0.16",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["etl*", "pipelines*", "ioutils*", "transformations*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]
