[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==24.8.0",
    "confluent-kafka==2.4.0",
    "daft==0.1.2",
    "deltalake==1.1.4",
    "fastparquet==2024.5.0",
    "flake8==7.1.1",
    "ipython==8.27.0",
    "kafka-python==2.0.2",
    "minio==7.1.14",
    "orjson==3.10.7",
    "pandas==2.2.3",
    "prefect==3.0.2",
    "psycopg2-binary==2.9.9",
    "pyarrow==17.0.0",
    "pyhive==0.7.0",
    "pytest==8.3.3",
    "python-dotenv==1.0.1",
    "ray[default]==2.37.0",
    "requests==2.32.3",
    "sqlalchemy==2.0.35",
]
